footer sections space fixed, banner margin fixed, contact mail moved,footer spacing fixed in general

--- a/styles/home.scss
+++ b/styles/home.scss
@@ -54,9 +54,11 @@ body {
   background-color: $orange;
   min-height: 90vh;
   z-index: 9999;
+  padding: 0px 35px;
 
   @media screen and (max-width:768px) {
     min-height: 70vh;
+    padding: 0px;
   }
 }
 
@@ -667,18 +669,17 @@ body {
 
     .textContent {
       max-width: 25%;
-      margin-right: 40px;
+      margin-right: 20px;
       margin-left: 10px;
       height: fit-content;
-      min-height: 250px;
-      margin-bottom: 20px;
+      // min-height: 250px;
 
       // margin: 10px;
       // background-color: green;
 
       @media screen and (max-width:768px) {
         max-width: 100%;
-        margin-bottom: -100px;
+        // margin-bottom: -100px;
       }
 
       .textTitle {
@@ -715,6 +716,10 @@ body {
         @media screen and (max-width:768px) {
           font-size: 20px;
           line-height: 20px;
+          margin-bottom: 20px;
+
+          height: fit-content;
+          // background-color: red;
         }
 
         @media screen and (max-width:500px) {
@@ -804,7 +809,7 @@ body {
       flex-direction: column;
       padding: 10px;
       color: black;
-      margin-top: 0px;
+      margin-top: -10px;
       margin-left: 20px;
 
 
@@ -843,7 +848,7 @@ body {
       margin-left: -10px;
       display: flex;
       flex-direction: column;
-      color:#7E7E7E;
+      color: #7E7E7E;
 
       @media screen and (max-width:768px) {
         margin-top: -20px;
@@ -855,7 +860,7 @@ body {
         line-height: 25px;
         font-size: 30px;
         font-weight: bolder;
-        color:#7E7E7E;
+        color: #7E7E7E;
         // background-color: red;
         margin-bottom: 5px;
       }
@@ -1009,11 +1014,11 @@ body {
       // background-color: blue;
       font-size: 35px;
       color: #7E7E7E;
-      margin-right: 30px;
+      // margin-right: 30px;
       margin-bottom: -100px;
       font-weight: bolder;
       // background-color: red;
-      margin-right: 100px;
+      // margin-right: 100px;
 
       @media screen and (max-width:1200px) {
         font-size: 20px;
